# emvault-pkcs11

./: Cargo.toml  README.md  clippy.toml
src/: config.rs  derivation.rs  ecdsa.rs  elements.rs  error.rs  key_ops.rs  lib.rs  policy.rs  session.rs  signer.rs
src/backend/: mod.rs  thales.rs  utimaco.rs
tests/: derive_blinding.rs  elements_pset_signing.rs  gen_address.rs  integration.rs  node_pkcs11_cross_check.rs  node_pkcs11_elements_cross_check.rs  unit.rs
tests/common/: mod.rs  rpc.rs
