[package]
name = "emvault-pkcs11"
version = "0.1.0"
edition = "2024"
description = "PKCS#11-backed Signer implementation for the Emerald multi-signature custody platform."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmikeska/emvault-pkcs11"

[features]
default = []
# Enable integration tests against a live PKCS#11 token described by .env.
integration = []
# Enable RPC tests against an external bitcoind via .env (BITCOIN_RPC_*).
# Combine with `integration` for HSM-backed federation cross-checks.
node-tests = []
# Enable Elements/Liquid signing on Pkcs11Signer. Activates the matching
# `elements` feature on `emvault-core` and pulls in `emvault-elements`
# so the HSM can produce ECDSA partial signatures over PSET inputs.
# CT-specific operations (blinding, range proofs, surjection proofs) stay
# software-side via LWK; the HSM only does ECDSA, identical to the
# Bitcoin path.
elements = ["emvault-core/elements", "dep:emvault-elements", "dep:elements"]

[dependencies]
emvault-core = { version = "0.1.0", path = "../emvault-core" }
emvault-elements = { version = "0.1.0", path = "../emvault-elements", optional = true }
bdk_wallet = "3.1.0"
bitcoin = "0.32.10"
cryptoki = "0.12.0"
elements = { version = "0.25", features = ["serde"], optional = true }
hex = "0.4.3"
miniscript = "12.3.7"
secrecy = "0.10.3"
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
emvault-core = { path = "../emvault-core", features = ["test-utils"] }
emvault-dev-signer = { path = "../emvault-dev-signer" }
dotenvy = "0.15.7"
serial_test = "3.5.0"
tempfile = "3.27.0"
ureq = { version = "2.10", features = ["json"] }
